# model/request/base_org.go
@@ -3,3 +3,7 @@ package request
 type AddOrg struct {
 	OrgName string `json:"org_name"`
 }
+
+type FindOrg struct {
+	OrgName string `json:"org_name"`
+}
